Name:                diagrams-openscad
Version:             0.1
Synopsis:            OpenSCAD solid modeling backend for diagrams EDSL
Description:         XXX write me
Homepage:            http://projects.haskell.org/diagrams
License:             BSD3
License-file:        LICENSE
Author:              Daniel Bergey
Maintainer:          diagrams-discuss@googlegroups.com
Bug-reports:         http://github.com/bergey/diagrams-openscad/issues
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.10
Tested-with:         GHC ==7.0.3
Source-repository head
  type:     git
  location: http://github.com/bergey/diagrams-openscad.git

Library
  Exposed-modules:   Diagrams.Backend.OpenSCad, Diagrams.Backend.OpenSCad.CmdLine
  Hs-source-dirs:    src
  Build-depends:     base >= 4.2 && < 4.9,
                     diagrams-core >= 1.3 && < 1.4,
                     diagrams-lib >= 1.3 && < 1.4,
                     pretty >= 1.0.1.2 && < 1.2,
                     colour >= 2.3 && < 2.4,
                     lens >= 4.0 && < 4.12,
                     linear >= 1.11.3 && < 1.19,
                     containers >= 0.5 && < 0.6,
                     OpenSCAD >= 0.3 && < 0.4
  Default-language:  Haskell2010
